<resources>
    <string name="app_name">MovieTracker</string>
    <string name="back_button_press">Please click back again to exit</string>
    <string name="bind">bind:</string>

    <!-- Toolbar   -->
    <string name="toolbar_settings_title">Title</string>
    <string name="toolbar_settings_release_date">Release Date</string>
    <string name="toolbar_settings_vote_average">Vote average</string>
    <string name="toolbar_settings_popularity">Popularity</string>
    <string name="toolbar_settings_sort_button">Sort</string>
    <string name="toolbar_settings_desc">DESC</string>
    <string name="toolbar_settings_asc">ASC</string>
    <string name="sortBy">sort_by</string>
    <string name="orderBy">order_by</string>
    <string name="logo">logo</string>

    <!--  GridView  -->
    <string name="choose_genre_textView">Choose a genre you want to Watch</string>
    <string name="no_selected_genres">Please select at least a genre</string>
    <string name="verticalGridView_element_setScaleSizeTo">1.14</string>
    <string name="verticalGridView_element_normalScaleSize">1</string>
    <string name="empty_genre_list_from_server">Empty genre list downloaded from the Server</string>
    <string name="search_in_genres">search in selectedGenres</string>
    <string name="genreIds">genreIds</string>
    <string name="removed_genre">Genre removed</string>
    <string name="added_genre">Genre added</string>
    <string name="genreSelectorFragment">showGenreSelectorFragment:</string>

    <string name="youtube_recommendation">Youtube recommendation</string>

    <!--  MovieNavigationFragment  -->
    <string name="movieName">movieName</string>
    <string name="moviePlot">moviePlot</string>
    <string name="movieRate">movieRate</string>
    <string name="movieReleaseDate">movieReleaseDate</string>
    <string name="movieBackDropPath">movieBackDropPath</string>
    <string name="movieId">movieId</string>
    <string name="onResume">onResume:</string>
    <string name="isActivated">isActivated</string>
    <string name="CardViewOnFocusChangeListener">CardView OnFocusChangeListener</string>
    <string name="getMovies">getMovies:</string>
    <string name="onStart">onStart:</string>
    <string name="video">video</string>

    <!--  PlayerFragment  -->
    <string name="ExoplayerCodeLab">exoplayer-codelab</string>
    <string name="playIndex">playIndex</string>
    <string name="YoutubeBaseUrl">https://youtube.com/watch?v=%s</string>
    <string name="zero">0</string>
    <string name="cast">Cast</string>
    <string name="videos">Videos</string>
    <string name="selectedGenres">selectedGenres</string>
    <string name="no_internet_connection">No internet Connection</string>
    <string name="internet_connected">Internet connected</string>
    <string name="no_internet_connection_please_check_your_internet_cable_plugged_in_your_device_or_if_you_are_using_wifi_check_if_it_works_correctly">No internet Connection, please check your internet cable plugged in your device or if you are using wifi check if it works correctly!</string>
    <string name="try_again">Try Again</string>
    <string name="exit_application">Exit</string>
    <string name="movie">movie</string>
    <string name="genres">genres</string>
    <string name="desc">.desc</string>
    <string name="asc">.asc</string>
    <string name="originalTitle">original_title</string>
    <string name="startToolbarSettingsDialog">startToolbarSettingsDialog:</string>
    <string name="popularity">popularity</string>
    <string name="voteAverage">vote_average</string>
    <string name="releaseDate">release_date</string>
    <string name="sortError">Sort error</string>
    <string name="setActiveButtonWithSharedPref">setActiveButtonWithSharedPref:</string>
    <string name="review_by">Review by</string>
    <string name="year">Year</string>
    <string name="imdb">IMDb</string>
    <string name="actorpicture">actorPicture</string>
    <string name="backgroundImage">backGroundImage</string>
    <string name="bottom_overlay">bottom_overlay</string>
    <string name="background_overlay">background_overlay</string>
    <string name="genre_image_view">genre_image_view</string>
    <string name="select_icon">select_icon</string>
    <string name="star_icon">star_icon</string>
    <string name="movie_poster">movie_poster</string>
    <string name="exo_prev">exo_prev</string>
    <string name="exo_rew">exo_rew</string>
    <string name="exo_pause">exo_pause</string>
    <string name="exo_play">exo_play</string>
    <string name="exo_ffwd">exo_ffwd</string>
    <string name="exo_next">exo_next</string>


</resources>
