<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:leanback="http://schemas.android.com/tools"
    android:layout_width="260dp"
    android:layout_height="300dp">


    <Button
        android:id="@+id/toolbar_settings_sort_button"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/toolbar_settings_sort_button"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radio_button_group" />


    <RadioGroup
        android:id="@+id/radio_button_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        leanback:focusOutEnd="true"
        leanback:focusOutFront="true">

        <RadioButton
            android:id="@+id/radio_button_title"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_margin="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            />

        <RadioButton
            android:id="@+id/radio_button_release_date"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_margin="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radio_button_title" />

        <RadioButton
            android:id="@+id/radio_button_vote_average"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_margin="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radio_button_release_date" />

        <RadioButton
            android:id="@+id/radio_button_rating"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_margin="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radio_button_vote_average" />


    </RadioGroup>


    <Switch
        android:id="@+id/switch_order_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:rotation="90"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/release_date_textView"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/vote_average_textView"
        android:layout_width="75dp"
        android:layout_height="35dp"
        android:layout_margin="16dp"
        android:gravity="center"
        android:text="@string/toolbar_settings_vote_average"
        app:layout_constraintStart_toEndOf="@id/radio_button_group"
        app:layout_constraintTop_toBottomOf="@id/release_date_textView" />


    <TextView
        android:id="@+id/rating_textView"
        android:layout_width="75dp"
        android:layout_height="35dp"
        android:layout_margin="16dp"
        android:gravity="center"
        android:text="@string/toolbar_settings_popularity"
        app:layout_constraintStart_toEndOf="@id/radio_button_group"
        app:layout_constraintTop_toBottomOf="@id/vote_average_textView" />


    <TextView
        android:id="@+id/title_textView"
        android:layout_width="75dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/toolbar_settings_title"
        app:layout_constraintStart_toEndOf="@+id/radio_button_group"
        app:layout_constraintTop_toTopOf="@id/radio_button_group" />

    <TextView
        android:id="@+id/release_date_textView"
        android:layout_width="75dp"
        android:layout_height="35dp"
        android:layout_margin="16dp"
        android:gravity="center"
        android:text="@string/toolbar_settings_release_date"
        app:layout_constraintStart_toEndOf="@id/radio_button_group"
        app:layout_constraintTop_toBottomOf="@id/title_textView" />

    <TextView
        android:id="@+id/toolbar_asc_textView"
        android:layout_width="50dp"
        android:layout_height="25dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/toolbar_settings_asc"
        app:layout_constraintBottom_toTopOf="@id/switch_order_by"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/release_date_textView" />

    <TextView
        android:id="@+id/toolbar_desc_textView"
        android:layout_width="50dp"
        android:layout_height="25dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/toolbar_settings_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/release_date_textView"
        app:layout_constraintTop_toBottomOf="@id/switch_order_by" />


</androidx.constraintlayout.widget.ConstraintLayout>