<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/detail_page_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/custom_black">

    <ImageView
        android:id="@+id/background_image"
        android:layout_width="@dimen/fragment_detail_page_background_image_width"
        android:layout_height="@dimen/fragment_detail_page_background_image_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/backgroundImage" />

    <ImageView
        android:id="@+id/movie_bottom_overlay"
        android:layout_width="@dimen/cast_layout_width"
        android:layout_height="@dimen/fragment_detail_page_bottom_overlay_height"
        android:src="@drawable/movie_bottom_overlay"
        app:layout_constraintBottom_toBottomOf="@id/background_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/bottom_overlay" />

    <ImageView
        android:id="@+id/movie_background_overlay"
        android:layout_width="@dimen/fragment_detail_page_background_overlay_width"
        android:layout_height="@dimen/fragment_detail_page_background_overlay_height"
        android:src="@drawable/movie_picture_gradient_overlay"
        app:layout_constraintStart_toStartOf="@id/background_image"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/background_overlay" />

    <androidx.leanback.widget.VerticalGridView
        android:id="@+id/detail_page_grid_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
